Fixing aligning of comment date when viewing at medium+ screens

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -531,6 +531,13 @@
           margin-bottom: -1rem;
         }
       }
+      @media only screen and (min-width: 1024px) {
+        .comments-panel {
+          .donation-time {
+            margin-left: 0.5rem;
+          }
+        }
+      }
       .creation-date {
         color: $tag-color;
         font-family: $body-font-family;
